# webrtc-build

./: .dockerignore  .gitignore  001-d2123d9.diff  002-e68cb78.diff  003-c42162c.diff  004-bcb19c0.diff  AGENTS.md  CHANGES.md  CLADUE.md  DEPS  DEVELOPMENT.md  LICENSE  NOTICE  OLD_CHANGES.md  PATCH_DEVELOP_TOOL.md  README.md  VERSION  VERSION.head  android_audio_pause_resume.patch  build.android.sh  build.centos-8_x86_64.sh  build.ios.sh  build.macos.sh  build.macos_arm64.sh  build.macos_x86_64.sh  build.macos_x86_64_objc.sh  build.raspberry-pi-os_armv6.sh  build.raspberry-pi-os_armv7.sh  build.raspberry-pi-os_armv8.sh  build.raspbian-buster_armv6.sh  build.raspbian-buster_armv7.sh  build.ubuntu-16.04_armv7.sh  build.ubuntu-16.04_x86_64.sh  build.ubuntu-18.04_armv8.sh  build.ubuntu-18.04_armv8_jetson_nano.sh  build.ubuntu-18.04_armv8_jetson_xavier.sh  build.ubuntu-18.04_x86_64.sh  build.ubuntu-20.04_armv8.sh  build.ubuntu-20.04_x86_64.sh  build.ubuntu-22.04_x86_64.sh  (+10 more)
android/: Dockerfile
centos-8_x86_64/: Dockerfile
docs/: patch_ios.md  patch_ios_manual_audio_input.md  patch_ios_peerconnectiondependencies.md  patch_ios_simulcast.md
issues/: 0001-add-ubuntu-26.04-support.md
multistrap/: raspberry-pi-os_armv8.conf  ubuntu-18.04_armv8.conf  ubuntu-22.04_armv8.conf  ubuntu-24.04_armv8.conf  ubuntu-26.04_armv8.conf
patches/: 4k.patch  README.md  add_dep_zlib.patch  add_deps.patch  add_license_dav1d.patch  add_scale_resolution_down_to.patch  android_add_scale_resolution_down_to.patch  android_audio_pause_resume.md  android_audio_pause_resume.patch  android_audio_sink.md  h265.patch  (+78 more)
validation/: CMakeLists.txt  fake_video_capturer.cpp  fake_video_capturer.h  internal_decoder_factory.cc  internal_encoder_factory.cc  offer.cpp
(+150 files in other folders)
